--- a/CopsAndRobbers/Packages/manifest.json
+++ b/CopsAndRobbers/Packages/manifest.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
-    "com.unity.2d.tilemap": "1.0.0",
     "com.unity.2d.spriteshape": "3.0.15",
+    "com.unity.2d.tilemap": "1.0.0",
     "com.unity.cinemachine": "2.7.1",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.1",
     "com.unity.inputsystem": "1.0.2",
+    "com.unity.render-pipelines.universal": "7.3.1",
     "com.unity.test-framework": "1.1.14",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.15",
